--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ section {
 /* MYTUNES START */
 #myTunes{
     background: url("./img/showcase.jpg");
+    background-position: center;
+    background-size: cover;
     color: rgba(230, 225, 225, 0.884);
     padding: 20px;
 }
@@ -95,9 +97,13 @@ section {
 .btn02{
     background-color: rgb(38, 38, 102);
     border: none;
+    margin: 10px;
     padding: 15px;
     color: rgba(230, 225, 225, 0.884);
     cursor: pointer;
+}
+#movie a{
+    display: block;
 }
 /* MOVIE END */
 /* ENTERTAINMENT START */
@@ -119,13 +125,13 @@ section {
 /* GIFT START */
 #Gift{
     background-color: rgb(224, 218, 218);
-    display: grid;
+    display: flex;
     height: 400px;
     padding-top: 30px;
-    grid-template-columns: repeat(2, 1fr);
+    /* grid-template-columns: repeat(2, 1fr); */
     }
 #Gift img{
-    width: 50%;
+    width: 30%;
 }
 #Gift h2{
     padding-bottom: 30px;
@@ -136,16 +142,19 @@ section {
     text-align: left;
     line-height: 1.5em;
 }
-#Gift a{
+.GiftCards a{
     text-decoration: none;
-    color: rgb(35, 35, 236);
-    padding-bottom: 30px;
+    color: rgb(21, 21, 121);
     text-align: left;
 }
-#Gift p:nth-child(4){
-    border-bottom: 1px solid rgb(114, 111, 111);
-    padding-bottom: 10px;
+.GiftCards{
+    width: 50%;
+    margin: 40px;
 }
+.GiftCards p.line{
+    border-bottom: 2px solid rgb(126, 124, 124);
+}
+
 /* GIFT END */
 /* COLL INFORMATION START */
 #coll-Information{
